All bugs fixed
